...
          ),
        ),
        actions: [
          Padding(
            padding: const EdgeInsets.only(right: 8),
            child: TextButton(
              key: const Key("save_button"),
              onPressed: () {
                AppLogger.debug("task saved");
                ref.read(taskStateProvider.notifier).addOrEditTask(task);
                FirebaseAnalytics.instance.logEvent(
                  name: 'add',
                  parameters: {
...
