...
                  ),
                ),
              ),
            ],
          ),
          floatingActionButton: FloatingActionButton(
            key: const Key("add_task_floating_button"),
            shape: const CircleBorder(),
            onPressed: () {
              context.push("/add");
              FirebaseAnalytics.instance.logEvent(
                name: 'push',
                parameters: {
...
